# cpp-simple-logger

./: .gitignore  CMakeLists.txt
cmake/: CompilerWarnings.cmake
include/logger/: LogLevel.hpp  LogMessage.hpp  ThreadSafeQueue.hpp
src/: LogMessage.cpp
tests/: CMakeLists.txt  LoggerTests.cpp
